@@ -20,22 +20,26 @@ function check_fs_mount() {
             if [[ "$SRC" != "" ]]; then
                 if ! mcheck "$DEV" "$SRC" ; then
                     die 1 "$FUNCNAME:  $FS mounted from $DEV (should be $SRC)"
+                    return 1
                 fi
             fi
             if [[ "$FSTYPE" != "" ]]; then
                 if ! mcheck "$TYPE" "$FSTYPE" ; then
                     die 1 "$FUNCNAME:  $FS has incorrect type $TYPE (should be $FSTYPE)"
+                    return 1
                 fi
             fi
             if [[ "$OPTIONS" != "" ]]; then
                 if ! mcheck "$OPTS" "$OPTIONS" ; then
                     die 1 "$FUNCNAME:  $FS mount options incorrect"
+                    return 1
                 fi
             fi
             return 0
         fi
     done < /proc/mounts
     die 1 "$FUNCNAME:  $FS not mounted"
+    return 1
 }
 
 # Some shortcuts that use check_fs_mount()
